# mobi_ros2

./: CMakeLists.txt  README.md  package.xml
description/: backup.urdf.xacro  bu_macro.parts.urdf.xacro  macro.materials.urdf.xacro  macro.parts.urdf.xacro  macro.tower.urdf.xacro  mobi_4wd.urdf.xacro
launch/: gazebo.launch.py  urdf_visualize.launch.py  urdf_visualize_xacro.launch.py
meshes/: sensors.tar
rviz/: urdf_vis.rviz
